--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,12 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "es5",
-      "es6",
-      "es7",
-      "esnext",
-      "dom"
-    ],
+    "lib": ["es5", "es6", "es7", "esnext", "dom"],
     "target": "es2018",
     "removeComments": false,
     "esModuleInterop": true,
@@ -24,6 +18,8 @@
   },
   "include": [
     "./src/**/*",
+    "./__tests__/**/*",
+    "./benchmarks/**/*",
     "playground.ts",
     "./.eslintrc.js"
   ]
