--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
           private_key: '${{ secrets.WIREGUARD_PRIVATE }}'
           preshared_key: '${{ secrets.WIREGUARD_PRESHARED }}'     
 
+      - ping sonarqube.squantumengine.com
+      
+      - curl -vk https://sonarqube.squantumengine.com
+      
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
