--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          
+      - name: Add hosts to /etc/hosts
+        run: sudo echo "10.10.0.18 sonarqube.squantumengine.com" | sudo tee -a /etc/hosts      
       
       - name: Set up WireGuard
         uses: egor-tensin/setup-wireguard@v1
@@ -30,6 +33,7 @@ jobs:
           private_key: '${{ secrets.WIREGUARD_PRIVATE }}'
           preshared_key: '${{ secrets.WIREGUARD_PRESHARED }}'      
       
+      - run: curl -vk hhttps://sonarqube.squantumengine.com/
 
       - uses: sonarsource/sonarqube-scan-action@master
         env:
