--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           private_key: '${{ secrets.WIREGUARD_PRIVATE }}'
           preshared_key: '${{ secrets.WIREGUARD_PRESHARED }}'      
       
-      - run: curl -vk hhttps://sonarqube.squantumengine.com/
+      - run: curl -vk https://sonarqube.squantumengine.com/
 
       - uses: sonarsource/sonarqube-scan-action@master
         env:
