--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,21 +22,24 @@ jobs:
           
       - name: Add hosts to /etc/hosts
         run: sudo echo "10.10.0.18 sonarqube.squantumengine.com" | sudo tee -a /etc/hosts      
-      
-      - name: Set up WireGuard
-        uses: egor-tensin/setup-wireguard@v1
-        with:
-          endpoint: '${{ secrets.WIREGUARD_ENDPOINT }}'
-          endpoint_public_key: '${{ secrets.WIREGUARD_ENDPOINT_PUBLIC }}'
-          ips: '${{ secrets.WIREGUARD_IPS }}'
-          allowed_ips: '${{ secrets.WIREGUARD_ALLOWED_IPS }}'
-          private_key: '${{ secrets.WIREGUARD_PRIVATE }}'
-          preshared_key: '${{ secrets.WIREGUARD_PRESHARED }}'      
+ 
+      - run: sudo apt install wireguard
+
+      - run: ip link add dev wg0 type wireguard
+
+      - run: ip address add dev wg0 100.93.172.194/24
+
+      - run: echo '${{ secrets.WIREGUARD_CONFIG }}' > wireguard.conf
+
+      - run: wg setconf wg0 wireguard.conf
+
+      - run: ip link set up dev wg0
+      - run: curl -vvv https://sonarqube.squantumengine.com/
 
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: "http://sonarqube.squantumengine.com"
+          SONAR_HOST_URL: ${{ secrets.SONAR_URL }}
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       - uses: sonarsource/sonarqube-quality-gate-action@master
