--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
 
       - run: sudo wg setconf wg0 wireguard.conf
 
-      - run: ip link set up dev wg0
+      - run: sudo ip link set up dev wg0
       - run: curl -vvv https://sonarqube.squantumengine.com/
 
       - uses: sonarsource/sonarqube-scan-action@master
