--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,9 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
           
-      - run: sudo apt install wireguard
+      - run: |
+          sudo apt install wireguard
+          sudo apt install resolvconf
 
       - run: sudo mkdir -p /etc/wireguard
 
