--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,11 @@ jobs:
 
       - run: sudo wg-quick up wg0
 
+      - run: ip addr
+
       - run: curl -vvv https://sonarqube.squantumengine.com
 
       - uses: sonarsource/sonarqube-scan-action@master
-        run: sudo wg-quick up wg0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
