--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
           unzip sonar-scanner-cli-5.0.1.3006-linux.zip
-          sudo cp sonar-scanner-cli-5.0.1.3006-linux/bin/sonar-scanner /usr/bin
+          sudo cp sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner /usr/bin
 
       - name: Config Wireguard
         run: |
