--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt install wireguard
           sudo apt install resolvconf
           sudo apt install openjdk-17-jre
-          sudo apt-get install libc6-i386
+          sudo apt install unzip
 
 
       - name: Config Sonar
