fix wireguard tunnel

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,9 +32,8 @@ jobs:
         run: |
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
           sudo unzip -d /opt sonar-scanner-cli-5.0.1.3006-linux.zip
-          cd /opt
-          ls -la
-          sudo mv sonar-scanner-5.0.1.3006-linux sonar-scanner
+          sudo mv /opt/sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner
+          sudo echo '${{ secrets.SONAR_HOST_URL }}' >> /opt/sonar-scanner/conf/sonar-scanner.properties
 
       - name: Config Wireguard
         run: |
