fix wireguard tunnel

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
           wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
           sudo unzip -d /opt sonar-scanner-cli-5.0.1.3006-linux.zip
           sudo mv /opt/sonar-scanner-5.0.1.3006-linux /opt/sonar-scanner
-          sudo echo '${{ secrets.SONAR_HOST_URL }}' >> /opt/sonar-scanner/conf/sonar-scanner.properties
+          echo '${{ secrets.SONAR_HOST_URL }}' | sudo tee -a /opt/sonar-scanner/conf/sonar-scanner.properties
 
       - name: Config Wireguard
         run: |
