fix wireguard tunnel

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,8 +41,7 @@ jobs:
 
       - name: Sonar Analysis
         run: /opt/sonar-scanner/bin/sonar-scanner \
-              -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
-              -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+              -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
               -Dsonar.projectKey=${{ github.event.repository.name }} \
               -Dsonar.organization=patrianugraha \
               -Dsonar.sources=src
